# AnnoMe

./: .gitignore  Demo_FilterDatabases.py  Instructions_DemoPrenylatedFlavonoids.md  LICENSE.md  README.md  annome_classificationgui.bat  annome_downloadresources.sh  annome_filtergui.sh  config.json  pyproject.toml
demo/: Analysis_PrenylatedCompounds_BOKUDB.html  Analysis_PrenylatedCompounds_BOKUDB.ipynb  Analysis_PrenylatedCompounds_publicDBs.ipynb  Analysis_StilbeneCompounds_publicDBs.ipynb  Classification_FlavonoidsCompounds_publicDBs.ipynb  Classification_PrenylatedCompounds_BOKUDB.ipynb  Classification_PrenylatedCompounds_publicDBs.ipynb  Demo_CreateClassifiersPrenylatedCompounds.py  Demo_FilterDatabasesPrenylatedCompounds.py  Demo_FilterDatabasesPrenylatedCompounds_BOKU.py  Demo_FilterDatabasesPrenylatedCompounds_publicDBs.py  Demo_FilterDatabasesStilbeneCompounds_publicDBs.py  Filter_ExtendedCompounds_BOKUDB.py  Filter_ExtendedCompounds_publicDBs.py  Filter_FlavonoidsCompounds_BOKUDB.py  Filter_FlavonoidsCompounds_publicDBs.py  Filter_PrenylatedCompounds_BOKUDB.py  Filter_PrenylatedCompounds_publicDBs.py  GUI_PrenylatedCompounds_ClassificationFiles.json  GUI_PrenylatedCompounds_ClassificationModels.json  GUI_PrenylatedCompounds_ClassificationProject.json  GUI_PrenylatedCompounds_ClassificationProject_ComparisonClassifiers.json  GUI_PrenylatedCompounds_ClassificationProjectsmall.json  GUI_PrenylatedCompounds_ClassificationSubsets.json  GUI_PrenylatedCompounds_ComparisonClassifiersProject.json  GUI_PrenylatedCompounds_SMARTSFilterStrings.json  GUI_PrenylatedCompounds_SMARTSFilterStrings_nonPrenylatedFlavonoids.json  GUI_PrenylatedCompounds_SmallTestProject.json  SMARTSFilterStrings_PrenylatedCompounds.json  gui_PrenylatedCompounds.json  gui_smallTestingNoUseableResults.json
forPublication/: CalculateComparisonSirius.py  CalculateFlavonoidOverlap.py  CalculateStructureOverlap.py  Test_GTLimits.ipynb  Test_GTLimits.py
resources/: default_classifier_config.py.txt
src/: Functions.py
src/AnnoMe/: Classification.py  ClassificationGUI.py  DownloadResources.py  FilterGUI.py  Filters.py  Prediction.py  __init__.py  gui_components.py  style_motiondesk.qss
