[project]
name = "annome"
version = "0.17.4"
description = "Python package for MSMS spectra classification using in-house reference spectra"
readme = "README.md"
authors = [
    { name = "Christoph Bueschl"},
    { name = "Tomas Rypar"},
    { name = "Rainer Schuhmacher"}
]
requires-python = "==3.12.11"
dependencies = [
    "bokeh>=3.7.3",
    "chardet>=5.2.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matchms>=0.30.2",
    "ms2deepscore>=2.5.2",
    "natsort>=8.4.0",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pacmap>=0.8.0",
    "plotnine>=0.14.6",
    "polars>=1.31.0",
    "pyteomics>=4.7.5",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.8",
    "xlsxwriter>=3.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
